# GeoFabric

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pythin-ci.yml  render-mermaid.yml
docs/: geofabric.html  getting-started.md  index.html  index.md  search.js
docs/geofabric/: roi.html
scripts/: render-mermaid-from-readme.mjs
tests/data/: overture_buildings_sample.parquet  overture_places_sample.parquet
tests/data/pmtiles_output/: buildings.pmtiles
