[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "geofabric"
dynamic = ["version"]
description = "Query geospatial sources, analyze at scale, and publish results with a consistent API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marcos Fermin" }]
keywords = ["gis", "geospatial", "duckdb", "geopandas", "geoarrow", "geoparquet", "stac", "pmtiles"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "duckdb>=1.0.0",
  "pyarrow>=14.0.0",
  "pandas>=2.0.0",
  "shapely>=2.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
viz = [
  "geopandas>=0.14.0",
  "lonboard>=0.10.0",
]
stac = [
  "pystac>=1.10.0",
  "pystac-client>=0.7.0",
]
tiles = [
  "geopandas>=0.14.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "pre-commit>=3.7.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "pdoc>=14.0.0",
  "build>=1.2.0",
  "twine>=5.1.0",
]
all = [
  "geopandas>=0.14.0",
  "lonboard>=0.10.0",
  "pystac>=1.10.0",
  "pystac-client>=0.7.0",
]

[project.scripts]
gf = "geofabric.cli.app:main"

[project.entry-points."geofabric.sources"]
files = "geofabric.sources.files:FilesSourceFactory"
overture = "geofabric.sources.overture:OvertureSourceFactory"
s3 = "geofabric.sources.cloud:S3SourceFactory"
gcs = "geofabric.sources.cloud:GCSSourceFactory"
azure = "geofabric.sources.cloud:AzureSourceFactory"
postgis = "geofabric.sources.postgis:PostGISSourceFactory"
stac = "geofabric.sources.stac:STACSourceFactory"

[project.entry-points."geofabric.engines"]
duckdb = "geofabric.engines.duckdb_engine:DuckDBEngineFactory"

[project.entry-points."geofabric.sinks"]
pmtiles = "geofabric.sinks.pmtiles:PMTilesSinkFactory"

[tool.hatch.version]
path = "src/geofabric/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/geofabric"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["geofabric"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
pretty = true
namespace_packages = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for typer)
    "ARG001", # unused function argument (often needed for interface compliance)
    "ARG002", # unused method argument (often needed for API compatibility)
    "TC001",  # move import into TYPE_CHECKING block (causes runtime issues)
    "TC002",  # move third-party import into TYPE_CHECKING block (causes runtime issues)
    "TC003",  # move stdlib import into TYPE_CHECKING block (causes runtime issues)
    "RUF005", # consider unpacking instead of concatenation (stylistic preference)
]

[tool.ruff.lint.isort]
known-first-party = ["geofabric"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]

[tool.pylint.main]
ignore-patterns = ["test_.*\\.py"]

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long (handled by ruff)
    "C0302",  # too-many-lines
    "C0103",  # invalid-name (enum values, etc.)
    "C0415",  # import-outside-toplevel (lazy imports are intentional)
    "C1803",  # use-implicit-booleaness-not-comparison
    "R0903",  # too-few-public-methods (dataclasses, factories)
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0917",  # too-many-positional-arguments
    "R0902",  # too-many-instance-attributes
    "R0904",  # too-many-public-methods
    "R0801",  # duplicate-code
    "R0401",  # cyclic-import
    "R1732",  # consider-using-with
    "W0143",  # comparison-with-callable
    "W0201",  # attribute-defined-outside-init
    "W0212",  # protected-access (acceptable in tests and internals)
    "W0221",  # arguments-differ (acceptable for overrides)
    "W0603",  # global-statement (acceptable for singletons)
    "W0613",  # unused-argument (interface compliance)
    "W0621",  # redefined-outer-name (pytest fixtures)
    "W0622",  # redefined-builtin (intentional for 'open' function)
    "W0611",  # unused-import
    "W0612",  # unused-variable
    "W0404",  # reimported
    "W0107",  # unnecessary-pass
    "W0718",  # broad-exception-caught
    "W1510",  # subprocess-run-check
    "E1101",  # no-member (false positives with dynamic types)
    "E1133",  # not-an-iterable (false positives)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-locals = 25
max-attributes = 15

